--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 authors = [
     { name = "OneDL MMDetection Contributors", email = "oss-team@vbti.nl" }
 ]
-license = "LicenseRef-Apache-2.0"
+license = { text = "LicenseRef-Apache-2.0" }
 requires-python = ">=3.10"
 keywords = ["computer vision", "object detection", "instance segmentation"]
 classifiers = [
